--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@instagram-clonev1/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "private": true,
   "dependencies": {
     "react": "18.3.1",
@@ -40,6 +42,7 @@
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.0.11",
     "jsdom": "~22.1.0",
     "nx": "19.0.1",
     "prettier": "^2.6.2",
