--- a/apps/main-app-e2e/project.json
+++ b/apps/main-app-e2e/project.json
@@ -1,8 +1,8 @@
 {
   "name": "main-app-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "projectType": "application",
   "sourceRoot": "apps/main-app-e2e/src",
+  "tags": [],
   "implicitDependencies": ["main-app"],
   "// targets": "to see all targets run: nx show project main-app-e2e --web",
   "targets": {}
