--- a/apps/main-app/project.json
+++ b/apps/main-app/project.json
@@ -1,7 +1,7 @@
 {
   "name": "main-app",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/main-app/src",
+  "sourceRoot": "apps/main-app",
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project main-app --web",
