--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@nx/web": "19.0.1",
     "@nx/workspace": "19.0.1",
     "@playwright/test": "^1.36.0",
-    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-essentials": "7.6.19",
     "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/core-server": "^7.5.3",
+    "@storybook/core-server": "7.6.19",
     "@storybook/jest": "^0.2.3",
-    "@storybook/react-vite": "^7.5.3",
+    "@storybook/react-vite": "7.6.19",
     "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.8.0",
@@ -63,10 +63,11 @@
     "husky": "^9.0.11",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "19.0.1",
     "prettier": "^2.6.2",
-    "storybook": "^7.5.3",
+    "storybook": "7.6.19",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
